--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -46,7 +46,7 @@ epidemic_summary_outputs <- readRDS("../inst/blueprint_output_3_Sep9/Report_3_Ep
 
 # Overview {.unnumbered}
 
-In our [initial report](https://mrc-ide.github.io/helios/articles/blueprint.html) we introduced `helios`: an individual-based modelling framework for exploring the impact that installation of far UVC could have on the transmission and burden of respiratory infections. In a [follow-up report](https://mrc-ide.github.io/helios/articles/blueprint-july.html), we presented updates to that framework and a series of analyses evaluating the impact that the installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens. In this final report, we present updates to the framework made since the last report, and a series of analyses evaluating the impact that installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens.
+In our [initial report](https://mrc-ide.github.io/helios/articles/blueprint.html) we introduced `helios`: an individual-based modelling framework for exploring the impact that the installation of far UVC could have on the transmission and burden of respiratory infections. In a [follow-up report](https://mrc-ide.github.io/helios/articles/blueprint-july.html), we presented updates to that framework and a series of analyses evaluating the impact that the installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens. In this final report, we present updates to the framework made since the last report, and a series of analyses evaluating the impact that installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens.
 
 # Summary of Key Results {#changes}
 
@@ -141,7 +141,7 @@ ggplot(riskiness, aes(riskiness)) +
 
 ```
 
-The modelling framework is now able to accommodate targeting of far UVC in a manner based on the riskiness of a location. Below we show how assignment of far UVC works for the two targeting strategies for an example where far UVC is installed to cover 50% of total School, Workplace and Leisure location area. The two strategies are "random" (far UVC assigned randomly to locations, irrespective of their riskiness) and "targeted riskiness" (far UVC assigned to locations based on the rank ordered riskiness of each setting).
+The modelling framework is now able to target the deployment of far UVC in Locations based on their riskiness. Below we show how assignment of far UVC works for the two targeting strategies for an example where far UVC is installed to cover 50% of total School, Workplace and Leisure location area. The two strategies are "random" (far UVC assigned randomly to locations, irrespective of their riskiness) and "targeted riskiness" (far UVC assigned to locations based on the rank ordered riskiness of each setting).
 
 ```{r riskiness-coverage-exemplar, fig.cap="(ref:riskiness-coverage-exemplar)", fig.fullwidth = TRUE, fig.height=5}
 
@@ -216,7 +216,7 @@ Using the updated modelling framework described above, we conducted analyses eva
 
 ## Methods
 
-Here, we provide a (very) brief summary of the way in which we generated the results presented here. For both endemic and epidemic pathogen archetypes, we run the `helios` model with a range of parameter combinations varying far UVC coverage, far UVC efficacy, how the far UVC is targeted to locations (at random or by riskiness), and for two pathogen archetypes:
+Here, we provide a (very) brief summary of the way in which we generated the results presented here. For both endemic and epidemic pathogen archetypes, we run the `helios` model with a range of parameter combinations varying far UVC coverage, far UVC efficacy, how the far UVC is deployed (at random or targeted at the riskiest % of locations), and for two pathogen archetypes:
 
 -   **"SARS-CoV-2-Like" Archetype** - $R_0$ of 2.5, a mean latent period of 2 days, a mean duration of infectiousness of 4 days.
 
@@ -228,7 +228,7 @@ We also varied our assumption about whether the pathogen was "endemic" or "epide
 
 -   **far UVC Efficacy:** Either 40%, 60% or 80%, with the assumption that far UVC efficacy was identical across all Settings and Locations where it had been installed.
 
-All presented results are based on summary statistics (e.g. mean, range etc) calculated from 25 stochastic replicates. For the endemic pathogen, we used the reduction in annual infection incidence to summarise far UVC impact. Figure \@ref(fig:methods-figure-endemic) shows how this reduction in annual infection incidence was calculated. We ran the model for a period of time without far UVC (referred to in the figure as the "pre-UVC" period), and calculated the average annual incidence of infection over this period. We then introduced far-UVC at a certain point and ran the model for a further 10 years (referred to in the figure as "post-UVC"). We then calculated the average annual incidence of infection across this decade, and the difference in annual incidence of infection between the "pre-UVC" and "post-UVC" periods. For the epidemic pathogen, we considered 3 metrics that together summarise far UVC impact. These are the final epidemic size (i.e. the total number of individuals infected during the epidemic as a fraction of total population size), timing of the epidemic peak, and the size of the peak (i.e. the number of individuals infected when the epidemic is at its largest). For each metric, we ran a scenario with and without far UVC installed separately, and then compared each of the metrics in each case. Figure \@ref(fig:methods-figure-epidemic) shows the basis for how we calculated the different metrics used to asses far UVC impact in an epidemic pathogen scenario.
+All presented results are based on summary statistics (e.g. mean, range etc) calculated from 25 stochastic replicates. For the endemic pathogen, we used the reduction in annual infection incidence to summarise far UVC impact. Figure \@ref(fig:methods-figure-endemic) shows how this reduction in annual infection incidence was calculated. We ran the model for a period of time without far UVC (referred to in the figure as the "pre-UVC" period), and calculated the average annual incidence of infection over this period. We then introduced far-UVC at a certain point and ran the model for a further 10 years (referred to in the figure as "post-UVC"). We then calculated the average annual incidence of infection across this decade, and the difference in annual incidence of infection between the "pre-UVC" and "post-UVC" periods. For the epidemic pathogen, we considered 3 metrics that together summarise far UVC impact. These are the final epidemic size (i.e. the total number of individuals infected during the epidemic as a percentage of total population size), timing of the epidemic peak, and the size of the peak (i.e. the number of individuals infected when the epidemic is at its largest) as a percentage of the total population size. For each metric, we ran a scenario with and without far UVC installed separately, and then compared each of the metrics in each case. Figure \@ref(fig:methods-figure-epidemic) shows the basis for how we calculated the different metrics used to asses far UVC impact in an epidemic pathogen scenario.
 
 (ref:methods-figure-endemic) Calculation of the average reduction in annual infection incidence for the endemic pathogen scenarios. Grey colouring indicates pre-UVC period, and orange colouring indicates period following introduction of far UVC. Far UVC is installed at year 5 in this exemplar scenario (indicated by vertical dashed line). Horizontal dashed lines indicate the average incidence of infection in the pre and post UVC periods. Solid arrow indicates the difference in infection incidence between pre-UVC and post-UVC periods. Top panel shows daily incidence, bottom panel shows annual incidence.
 
@@ -337,12 +337,14 @@ ggplot(subset(temp_df3, timestep < 350)) +
 
 ### Epidemic Pathogen Analyses
 
-The results of analyses examining the impact of far UVC installation on an epidemic pathogen are presented in figures \@ref(fig:epidemic-peak-size), Figure \@ref(fig:epidemic-peak-timing), and Figure \@ref(fig:epidemic-final-size). We consider three metrics to evaluate the impact of far UVC in the case of an epidemic pathogen. The first is the number of infected individuals at the peak of transmission (hereafter referred to as "peak size", see Figure \@ref(fig:epidemic-peak-size)); the second is the timing of this peak (hereafter referred to as "peak timing"), see Figure \@ref(fig:epidemic-peak-timing); and the third is the total number of individuals infected over the course of the epidemic (hereafter referred to as "final epidemic size", see Figure \@ref(fig:epidemic-final-size).
+The results of analyses examining the impact of far UVC installation on an epidemic pathogen are presented in Figure \@ref(fig:epidemic-peak-size), Figure \@ref(fig:epidemic-peak-timing), and Figure \@ref(fig:epidemic-final-size). We consider three metrics to evaluate the impact of far UVC in the case of an epidemic pathogen. The first is the number of infected individuals at the peak of transmission as a percentage of the total population (hereafter referred to as "peak size", see Figure \@ref(fig:epidemic-peak-size)); the second is the timing of this peak (hereafter referred to as "peak timing"), see Figure \@ref(fig:epidemic-peak-timing); and the third is the total number of individuals, as a percentage of the total population, infected over the course of the epidemic (hereafter referred to as "final epidemic size", see Figure \@ref(fig:epidemic-final-size).
 
 #### Epidemic Peak Size
-Figure \@ref(fig:epidemic-peak-size) shows the impact of far UVC deployment on the peak size of the simulated epidemic. Assuming 10% coverage and 60% efficacy, random far UVC installation led to a 11.6% (range 13.7%-18.0%) (from 6.1% (5.4-7.7%) to 5.4% (4.7-6.3%)) reduction in the epidemic peak size, as a percentage of the total population, for the "Influenza-Like" archetype, and 4.5% (range 1.9%-5.6%) (from 20.4% (19.3-21.3%) to 19.5% (18.9-20.2%)) for the "SARS-CoV-2-Like" archetype. At 10% coverage and 80% assumed efficacy, these are 14.0% (range 13.3%-24.3%) (from from 6.1% (5.4-7.7%) to 5.3% (4.7-5.8%)) and 6.8% (range 4.5%-7.5%) (from 20.4% (19.3-21.3%) to 19.0% (18.4-19.7%)) for the "influenza-like" and "SARS-CoV-2-like" pathogens respectively. For the "influenza-like" pathogen, targeting 60% efficacious far UVC at the riskiest 10% of locations produced a 21.8% (range 19.4-25.8%) (from (from 6.1% (5.4-7.7%) to 4.8% (4.4-5.7%)) reduction in epidemic peak size, which increased to 29.3% (range 28.7-29.5%) (from 6.1% (5.4-7.7%) to 4.3% (3.9-5.4%)) when efficacy was set to 80%. For the "SARS-CoV-2-like" pathogen, a 10% targeted far UVC strategy with 60% efficacy resulted in a 7.7% (range 6.3-8.6%) (from 20.4% (19.3-21.3%) to 18.8% (18.1-19.5%)) and 11.1% (range 8.6-10.3%) (from 20.4% (19.3-21.3%) to 18.1 (17.6-19.1%)) reduction in epidemic peak size respectively, relative to the no-intervention baseline.
+Figure \@ref(fig:epidemic-peak-size) shows the impact of far UVC deployment on the peak size of the simulated epidemic. Across all far UVC coverages, efficacies, and archetypes simulated, targeting far UVC deployment at the riskiest locations provided greater reductions in the peak epidemic size than random allocation. Increasing far UVC coverage led to progressively greater reductions in peak size, with a larger (proportional) impact on disease burden observed for an "influenza-like" pathogen than a "SARS-CoV-2-like" pathogen. Under some scenarios (e.g. $\geq$ 60% coverage and $\geq$ 80% efficacy, coverage targeted at riskiest settings), far UVC installation was sufficient to prevent the epidemic occurring entirely. While far UVC deployment failed to prevent an epidemic for the "SARS-CoV-2-Like" pathogen at even the highest coverage and efficacy combinations simulated, the targeted deployment of far UVC reduced the peak epidemic size up to \~60%. 
 
-For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 70% and the efficacy from 40% to 80% reduced the mean peak epidemic size by 53.7% (55.8-51.4%) (5.5% (4.8-6.1%) to 0.65% (0.24-1.1%)), while targeting coverage at the riskiest locations decreased the mean peak size by 99.1% (98.8-99.1%) (5.2% (4.8-5.7%) to 0.48% (0.44-0.71%)) for the same parameters. For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size by 53.7% (51.4-55.8%) (19.7% (18.8-21.0%) to 9.1 (8.3-10.2%)) for random coverage and by 67.8% (66.5-69.6%) (19.5% (18.7-20.6%) to 6.3 (5.6-6.8%)) for targeted coverage. Across all far UVC coverages, efficacies, and archetypes simulated, targeting far UVC deployment at the riskiest locations provided greater reductions in the peak epidemic size than random allocation. Increasing far UVC coverage led to progressively greater reductions in peak size, with a larger (proportional) impact on disease burden observed for an "influenza-like" pathogen than a "SARS-CoV-2-like" pathogen. Under some scenarios (e.g. $\geq$ 60% coverage and $\geq$ 80% efficacy, coverage targeted at riskiest settings), far UVC installation was sufficient to prevent the epidemic occurring entirely. While far UVC deployment failed to prevent an epidemic for the "SARS-CoV-2-Like" pathogen at even the highest coverage and efficacy combinations simulated, the targeted deployment of far UVC reduced the peak epidemic size up to \~60%.
+Assuming 10% coverage and 60% efficacy, random far UVC installation led to an 11.6% (range 13.7%-18.0%) reduction in the epidemic peak size (from 6.1% (5.4-7.7%) to 5.4% (4.7-6.3%)), as a percentage of the total population, for the "Influenza-Like" archetype, and 4.5% (range 1.9%-5.6%) (from 20.4% (19.3-21.3%) to 19.5% (18.9-20.2%)) for the "SARS-CoV-2-Like" archetype. At 10% coverage and 80% assumed efficacy, these are 14.0% (range 13.3%-24.3%) (from from 6.1% (5.4-7.7%) to 5.3% (4.7-5.8%)) and 6.8% (range 4.5%-7.5%) (from 20.4% (19.3-21.3%) to 19.0% (18.4-19.7%)) for the "influenza-like" and "SARS-CoV-2-like" pathogens respectively. For the "influenza-like" pathogen, targeting 60% efficacious far UVC at the riskiest 10% of locations produced a 21.8% (range 19.4-25.8%) (from (from 6.1% (5.4-7.7%) to 4.8% (4.4-5.7%)) reduction in epidemic peak size, which increased to 29.3% (range 28.7-29.5%) (from 6.1% (5.4-7.7%) to 4.3% (3.9-5.4%)) when efficacy was set to 80%. For the "SARS-CoV-2-like" pathogen, a 10% targeted far UVC strategy with 60% efficacy resulted in a 7.7% (range 6.3-8.6%) (from 20.4% (19.3-21.3%) to 18.8% (18.1-19.5%)) and 11.1% (range 8.6-10.3%) (from 20.4% (19.3-21.3%) to 18.1 (17.6-19.1%)) reduction in epidemic peak size respectively, relative to the no-intervention baseline.
+
+For the "influenza-like" pathogen and random coverage, increasing far UVC coverage from 10% to 70% and the efficacy from 40% to 80% reduced the mean peak epidemic size by 53.7% (55.8-51.4%) (5.5% (4.8-6.1%) to 0.65% (0.24-1.1%)), while targeting coverage at the riskiest locations decreased the mean peak size by 99.1% (98.8-99.1%) (5.2% (4.8-5.7%) to 0.48% (0.44-0.71%)) for the same parameters. For the "SARS-CoV-2-like" pathogen, doubling the efficacy from 40% to 80% and increasing the coverage from 10% to 70% decreased the peak size by 53.7% (51.4-55.8%) (19.7% (18.8-21.0%) to 9.1 (8.3-10.2%)) for random coverage and by 67.8% (66.5-69.6%) (19.5% (18.7-20.6%) to 6.3 (5.6-6.8%)) for targeted coverage.
 
 (ref:epidemic-peak-size) The impact of far UVC coverage type, coverage, and efficacy on the mean final epidemic size per 1000 individuals, defined as the maximum total number of recovered individuals in the population averaged across 25 stochastic model simulations, for influenza-like and SARs-CoV-2-like pathogens. The light blue lines represent simulations where was far UVC deployed at random, and the dark blue lines simulations where far UVC was targeted at the riskiest settings. The ribbons show minimum and maximum values across 25 stochastic replicates for each parameter set.
 
@@ -356,10 +358,10 @@ epidemic_summary_outputs |>
   scale_fill_manual(values = blueprint_colours, labels = c("Random", "Targeted")) +
   geom_ribbon(aes(ymin = min_peak / 1000, ymax = max_peak / 1000, fill = coverage_type),
               colour = NA, alpha = 0.3, show.legend = FALSE) +
-  scale_x_continuous(expand = c(0, 0)) +
   theme_bw(base_size = 12) +
+  scale_x_continuous(breaks = c(0, 10, 20, 30, 40, 50, 60, 70)) +
   labs(x = "Far UVC Coverage (%)",
-       y = "Mean Peak Epidemic Size \n (per 1,000 individuals)",
+       y = "Mean Peak Epidemic Size \n (% of population)",
        colour = "Coverage\nType") +
   facet_grid(archetype ~ efficacy,
              scales = "free_y",
@@ -377,7 +379,7 @@ epidemic_summary_outputs |>
 
 #### Epidemic Peak Timing
 
-Figure \@ref(fig:epidemic-peak-timing) shows the impact of far UVC deployment on the timing of the epidemic peak. The deployment of far UVC increased the time taken for the epidemic peak timing for both the "influnza-like" and the "SARS-CoV-2-like" pathogens. Increasing far UVC coverage and/or efficacy increased the epidemic peak time. For 10% coverage and 60% efficacy, far UVC installation with 60% efficacy led to the epidemic peak occurring 5 days (range 1-10 days) later for the "Influenza-Like" archetype when compared to the no far UVC scenario, while targeting far UVC caused the peak to occur 16 days (range 9-25 days) later. Increasing the efficacy to 80% resulted in relative delays of 7 days (range 3-16 days) and 20 days (range 17-25 days) for the random and targeted coverage types respectively. For the "SARS-CoV-2-Like" archetype 10% far UVC coverage with 60% efficacy delayed the epidemic peak by 2 (range 1-4 days) and 6 days (range 5-8 days) for the random and targeted strategies respectively, while increasing the efficacy to 80% for random and targeted far UVC achieved reductions of 5 days (range 3-6 days) and 8 days (range 6-9 days).
+Figure \@ref(fig:epidemic-peak-timing) shows the impact of far UVC deployment on the timing of the epidemic peak. The deployment of far UVC increased the time taken for the epidemic peak timing for both the "influnza-like" and the "SARS-CoV-2-like" pathogens. Increasing far UVC coverage and/or efficacy increased the epidemic peak time. For 10% coverage and 60% efficacy, far UVC installation with 60% efficacy led to the epidemic peak occurring 5 days (range 1-10 days) later for the "influenza-like" archetype when compared to the no far UVC scenario, while targeting far UVC caused the peak to occur 16 days (range 9-25 days) later. Increasing the efficacy to 80% resulted in relative delays of 7 days (range 3-16 days) and 20 days (range 17-25 days) for the random and targeted coverage types respectively. For the "SARS-CoV-2-like" pathogen, 10% far UVC coverage with 60% efficacy delayed the epidemic peak by 2 (range 1-4 days) and 6 days (range 5-8 days) for the random and targeted strategies respectively, while increasing the efficacy to 80% for random and targeted far UVC achieved reductions of 5 days (range 3-6 days) and 8 days (range 6-9 days).
 
 Increasing targeted far UVC efficacy from 40% to 80% and the coverage from 10% to 50% for the "influenza-like" pathogen increased the peak time by 286% (range 177.9-541.6%) (138 days (131-154) to 395 days (233-834)), while increasing far UVC efficacy from 40% to 80% and the coverage from 10% to 70% increased the peak time by 181% (range 169.8-187.9%) (109 days (106-116) to 195 days (180-218)) for the SARS-CoV-2-like pathogen. Targeting far UVC coverage at the riskiest settings provided greater delays in epidemic peak timing relative to the random allocation of far UVC across all combinations of efficacy and coverage, with the difference in epidemic peak time between targeted and random coverage types increasing with both far UVC coverage and efficacy. The peak time observed for the "influenza-like" pathogen decreased rapidly at 80% efficacy when coverage \> 50%, as far UVC prevented the epidemic from occurring (Figure \@ref(fig:epidemic-peak-size)).
 
@@ -394,8 +396,8 @@ epidemic_summary_outputs |>
   scale_fill_manual(values = blueprint_colours, labels = c("Random", "Targeted")) +
   geom_ribbon(aes(ymin = min_peak_timing, ymax = max_peak_timing, fill = coverage_type),
               colour = NA, alpha = 0.3, show.legend = FALSE) +
-  scale_x_continuous(expand = c(0, 0)) +
   theme_bw(base_size = 12) +
+  scale_x_continuous(breaks = c(0, 10, 20, 30, 40, 50, 60, 70)) +
   labs(x = "Far UVC Coverage (%)",
        y = "Time to Peak Infections (days)",
        colour = "Coverage\nType") +
@@ -428,10 +430,10 @@ epidemic_summary_outputs |>
   geom_line(linewidth = 1.2) +
   scale_colour_manual(values = blueprint_colours, labels = c("Random", "Targeted")) +
   scale_fill_manual(values = blueprint_colours, labels = c("Random", "Targeted")) +
-  geom_ribbon(aes(ymin = lq_final_size / 1000, ymax = uq_final_size / 1000, fill = coverage_type),
+  geom_ribbon(aes(ymin = min_final_size / 1000, ymax = max_final_size / 1000, fill = coverage_type),
               colour = NA, alpha = 0.3, show.legend = FALSE) +
-  scale_x_continuous(expand = c(0, 0)) +
   theme_bw(base_size = 12) +
+  scale_x_continuous(breaks = c(0, 10, 20, 30, 40, 50, 60, 70)) +
   labs(x = "Far UVC Coverage (%)",
        y = "Mean Final Epidemic Size \n (% of population)",
        colour = "Coverage\nType") +
@@ -452,7 +454,7 @@ epidemic_summary_outputs |>
 
 The results of analyses examining the impact of far UVC installation on an epidemic pathogen are presented in Figure \@ref(fig:endemic-impact). We consider a single metric for evaluating the impact of far UVC on the endemic pathogen. This is the total estimated annual incidence of new infections with the pathogen.
 
-We estimate that far UVC installation would have a larger (proportional) impact on disease burden for an "Influenza-Like" pathogen than a "SARS-CoV-2-Like" pathogen. Assuming 10% coverage and 80% efficacy, random far UVC installation led to a 8.8% (range 6.1%-12.1%) reduction in annual infection incidence for the "Influenza-Like" pathogen, while targeting far UVC to locations in order of riskiness increased the reduction in transmission to 15.8% on average (range 12.5%-19.7%), an approximately 1.8x increase in impact. For the "SARS-CoV-2-like" pathogen, random far UVC coverage assuming 10% coverage and 80% efficacy were asociated with a 3.7% (range 2.6%-4.8%) reduction in the annual incidence of infection. Targeting far UVC to locations in order of riskiness led to a 5.5% average reduction, a 1.5x increase compared to the randomly targeted scenario.
+We estimate that far UVC installation would have a larger (proportional) impact on disease burden for an "Influenza-like" pathogen than a "SARS-CoV-2-like" pathogen. Assuming 10% coverage and 80% efficacy, random far UVC installation led to an 8.8% (range 6.1%-12.1%) reduction in annual infection incidence for the "Influenza-Like" pathogen, while targeting far UVC to locations in order of riskiness increased the reduction in transmission to 15.8% on average (range 12.5%-19.7%), an approximately 1.8x increase in impact. For the "SARS-CoV-2-like" pathogen, random far UVC coverage assuming 10% coverage and 80% efficacy were associated with a 3.7% (range 2.6%-4.8%) reduction in the annual incidence of infection. Targeting far UVC to locations in order of riskiness led to a 5.5% average reduction, a 1.5x increase compared to the randomly targeted scenario.
 
 Our results also highlight that increasing far UVC coverage and/or increasing far UVC efficacy leads to increased impact, though the degree to which this is the case varies across pathogen archetypes. For the "Influenza-like" pathogen, when efficacy is 80%, increasing far UVC coverage from 10% to 30% led to the average annual reduction in incidence increasing from 8.8% to 26.3%, a 3x increase. For the "SARS-CoV-2-like" pathogen, increasing far UVC coverage from 10% to 30% led to the average annual reduction in incidence increasing from 3.7% to 9.8%, a 2.65x increase.
 
@@ -506,15 +508,15 @@ rel_impact <- ggplot(subset(x, coverage <= 0.7), aes(x = coverage, y = inc_reduc
                                       `0.6` = "60% Efficacy",
                                       `0.8` = "80% Efficacy",
                                       `flu` = "Influenza",
-                                      `sars_cov_2` = "SARS-CoV-2"))) +  scale_colour_manual(values = blueprint_colours,
-                                                                                            labels = c("Random", "Targeted/nRiskiness")) +
+                                      `sars_cov_2` = "SARS-CoV-2"))) +
+  scale_colour_manual(values = blueprint_colours, labels = c("Random", "Targeted\nRiskiness")) +
   theme_bw() +
-  labs(x = "Coverage", y = "Fold-increase impact relative to 10% coverage")
+  labs(x = "Coverage", y = "Fold-increase impact relative to 10% coverage", colour = "Coverage\nType")
 
 cowplot::plot_grid(raw_impact, rel_impact, nrow = 2)
 ```
 
-In Figure \@ref(fig:endemic-figure2), we show the relative extra impact achieved under each scenario by targeting far UVC to locations based on riskiness, rather than at random. In general, the relative gain in transmission reduction was greatest at low coverage - when only a small fraction of locations are covered, choosing to cover those that are most conducive to transmission has a substantial (relative) effect. As the % of locations covered increases, the random and targeted approaches become increasingly similar (when 100% of locations are covered, they are identical), and so the relative difference in impact decreases.
+In Figure \@ref(fig:endemic-figure2), we show the relative extra impact achieved under each scenario by targeting far UVC to locations based on riskiness, rather than at random. In general, the relative gain in transmission reduction was greatest at low coverage - when only a small fraction of locations are covered, choosing to cover those that are most conducive to transmission has a substantial (relative) effect. As the percentage of locations covered increases, the random and targeted approaches become increasingly similar (when 100% of locations are covered, they are identical), and so the relative difference in impact decreases.
 
 (ref:endemic-figure2) The relative extra impact of far UVC coverage targeted based on riskiness compared to targeting at random. The error bars for both show the inter-quartile range across 25 stochastic replicates for each parameter set.
 
@@ -551,7 +553,7 @@ ggplot(data = subset(avg_summary_outputs_diff, coverage <= 0.9),
 
 ### Comparison to simple multiplicative model
 
-We next compared these results to those produced by a simplistic, static multiplicative model of estimated impact calculated by multiplying the coverage and efficacy of the modelled far UVC together and then multiplying this by the proportion of transmission that is "targetable" by far UVC (i.e. the proportion of transmission that occurs outside households). The implicit assumption of this simple multiplication is that for every 1% of targetable transmission "covered", there is a 1% reduction in transmission. The results of this analyses are plotted below in \@ref(fig:comparison-1). As you can see, this simplified model provides similar estimates to those generated by `helios` for SARS-CoV-2, but significantly underestimates the impact for Influenza.
+We next compared these results to those produced by a simplistic, static multiplicative model of estimated impact calculated by multiplying the coverage and efficacy of the modelled far UVC together and then multiplying this by the proportion of transmission that is "targetable" by far UVC (i.e. the proportion of transmission that occurs outside households). The implicit assumption of this simple multiplication is that for every 1% of targetable transmission "covered", there is a 1% reduction in transmission. The results of this analyses are plotted below in Figure \@ref(fig:comparison-1), which demonstrates that the simplified model provides similar estimates to those generated by `helios` for SARS-CoV-2, but significantly underestimates the impact for Influenza.
 
 ```{r comparison-1, fig.cap="(ref:comparison-1)"}
 
@@ -577,7 +579,7 @@ ggplot(data = df_comparison, aes(x = 100 * hypothetical_reduction,
              scales = "free_y",
              labeller = as_labeller(c(`flu` = "Influenza",
                                       `sars_cov_2` = "SARS-CoV-2"))) +
-  scale_colour_manual(values = c("#00AFFF", "#03113E")) + 
+  scale_colour_manual(values = c("#00AFFF", "#03113E"), labels = c("Random", "Targeted")) + 
   labs(x = "Hypothetical Reduction in Annual Incidence\nBased On Simple, Multiplicative Model",
        y = "Reduction in Annual Incidence\nPredicted by helios (%)",
        col = "Pathogen\nArchetype") +
@@ -589,10 +591,10 @@ ggplot(data = df_comparison, aes(x = 100 * hypothetical_reduction,
 
 # Discussion
 
-Our results highlight the impact that deployment of far UVC could have in reducing disease transmission across a range of pathogen archetypes and disease metrics. Targeting the deployment of far UVC towards the riskiest locations provided additional reductions in epidemic size and intensity or endemic burden, but appreciable reductions were still observed when far UVC was installed at random and reductions in performance relative to targeted deployment could generally be overcome with increased efficacy and coverage. Far UVC deployment typically had a greater relative impact on the control of an "Influenza-Like" pathogen than the "SARS-CoV-2-Like" pathogen considered in our analyses.
+Our results highlight the impact that the deployment of far UVC could have in reducing disease transmission across a range of pathogen archetypes and disease metrics. Targeting the deployment of far UVC towards the riskiest locations provided additional reductions in epidemic size and intensity or endemic burden, but appreciable reductions were still observed when far UVC was installed at random and reductions in performance relative to targeted deployment could generally be overcome with increased efficacy and coverage. Far UVC deployment typically had a greater relative impact on the control of an "Influenza-like" pathogen than the "SARS-CoV-2-like" pathogen considered in our analyses.
 
-For the "Influenza-like" pathogen archetype (approximate $R_0$ of 1.35), targeted installation of far UVC at very high coverage and efficacy ($\geq$ 80%) achieved complete suppression in the epidemic instance (i.e. reduced R \< 1 and prevented the pathogen from spreading from low initial frequency). This was not achieved under any circumstances for the "SARS-CoV-2-like" pathogen archetype (approximate $R_0$ of 2.5). However, far UVC provided significant value in the epidemic scenarios even when it does not achieve complete suppression of the epidemic, as measured by the range of metrics considered in this report. Reductions in transmission that fall short of full suppression arising from far UVC can still reduce the associated pressure on healthcare systems by reducing the peak size (and therefore burden) on the healthcare system, and spreading that burden out over time - the so-called "flattening of the curve"). Delaying the epidemic peak also provides more time for other medical countermeasures, such as vaccines, to be developed. Furthermore, for the same disease burden, flattening the curve enables shorter and less stringent non-pharmaceutical interventions to be implemented relative to scenarios in which far UVC is not available.
+For the "Influenza-like" pathogen archetype (approximate $R_0$ of 1.35), targeted installation of far UVC at very high coverage and efficacy ($\geq$ 80%) achieved complete suppression in the epidemic instance (i.e. reduced R \< 1 and prevented the pathogen from spreading from low initial frequency). This was not achieved under any circumstances for the "SARS-CoV-2-like" pathogen archetype (approximate $R_0$ of 2.5). However, far UVC provided significant value in the epidemic scenarios even when it did not achieve complete suppression of the epidemic, as measured by the range of metrics considered in this report. Reductions in transmission that fall short of full suppression arising from far UVC could still reduce the associated pressure on healthcare systems by reducing the peak size (and therefore burden) on the healthcare system, and spreading that burden out over time - the so-called "flattening of the curve". Delaying the epidemic peak also provides more time for other medical countermeasures, such as vaccines, to be developed. Furthermore, for the same disease burden, flattening the curve enables shorter and less stringent non-pharmaceutical interventions to be implemented relative to scenarios in which far UVC is not available.
 
-In the context of an endemic pathogen, installation of far UVC to a random 10% of location space led to average reductions of approximately 9% and 4% in annual incidence of infection for the "Influenza-like" and "SARS-CoV-2-like" archetypes respectively. This difference between the archetypes is primarily dirven by differences in the $R_0$ of each (\~1.35 for "Influenza-like" and \~2.5 for "SARS-CoV-2-Like"). In general, there is a non-linear influence of $R_{0}$ on the final size of an epidemic (for an epidemic pathogen) and the average prevalence of infection (in the case of an persistently endemic pathogen). For lower values of $R_{0}$ which are near to the critical threshold of $R_0=1$, small increases to $R_0$ translate to (relatively) large increases in the above quantities (e.g. $R_0=1$ yields a final size of 0%; $R_0=1.25$ a final size of \~35%). At higher values of $R_{0}$ however, saturation occurs (e.g. the final size of an epidemic with robust and sterilizing immunity post infection can never be \>100%) and the rate at which increasing values of $R_0$ increases infection prevalence or epidemic final size diminishes (e.g $R_0=2$ yields a final size of \~80%; $R_0=2.25$ a final size of \~85%, $R_0=4$ a final size of \~95%). By the same logic, when the starting $R_0$ is high (as for the "SARS-CoV-2-Like" archetype), small reductions in $R_0$ (e.g. due to far UVC) will have only a slight impact on infection prevalence or epidemic final size. By contrast, when baseline $R_0$ is lower (as for the "Influenza-Like" archetype"), the infection prevalence (or final epidemic size) will decrease more (in relative terms) for the same (relative) reduction in $R_0$.
+In the context of an endemic pathogen, installation of far UVC to a random 10% of location space led to average reductions of approximately 9% and 4% in annual incidence of infection for the "Influenza-like" and "SARS-CoV-2-like" archetypes respectively. This difference between the archetypes is primarily driven by differences in the $R_0$ of each (\~1.35 for "Influenza-like" and \~2.5 for "SARS-CoV-2-like"). In general, there is a non-linear influence of $R_{0}$ on the final size of an epidemic (for an epidemic pathogen) and the average prevalence of infection (in the case of an persistently endemic pathogen). For lower values of $R_{0}$ which are near to the critical threshold of $R_0=1$, small increases to $R_0$ translate to (relatively) large increases in the above quantities (e.g. $R_0=1$ yields a final size of 0%; $R_0=1.25$ a final size of \~35%). At higher values of $R_{0}$ however, saturation occurs (e.g. the final size of an epidemic with robust and sterilizing immunity post infection can never be \>100%) and the rate at which increasing values of $R_0$ increases infection prevalence or epidemic final size diminishes (e.g $R_0=2$ yields a final size of \~80%; $R_0=2.25$ a final size of \~85%, $R_0=4$ a final size of \~95%). By the same logic, when the starting $R_0$ is high (as for the "SARS-CoV-2-like" archetype), small reductions in $R_0$ (e.g. due to far UVC) will have only a slight impact on infection prevalence or epidemic final size. By contrast, when baseline $R_0$ is lower (as for the "Influenza-like" archetype"), the infection prevalence (or final epidemic size) will decrease more (in relative terms) for the same (relative) reduction in $R_0$.
 
 Our results also highlight that the added value of targeting far UVC coverage based on riskiness (rather than at random) is greatest when the total percentage of covered space is low (e.g. 10% considered in the analyses presented in this report). As the proportion of space covered increases, there is increasing convergence between the two strategies (as a greater number of total spaces are covered). At 100% coverage, the two strategies are identical. Our results suggest that in instances where only a low fraction of spaces are likely to be covered (for instance during initial adoption of the technology), the value of information that enables installation to be targeted at the riskiest spaces is likely to be substantial.
